--- a/pixiv_util2/templates/pixiv_util2/admin_index.html
+++ b/pixiv_util2/templates/pixiv_util2/admin_index.html
@@ -4,9 +4,16 @@
 <link rel="shortcut icon" href="#" />
 {% endblock %}
 {% block body %}
-<form method="GET" action="/">
-  <div class="form-group"> {{ form.url.label }} {{ form.url(size=20, class_="form-control") }} </div>
-  <div class="form-group"> {{ form.image_ids.label }} {{ form.image_ids(size=20, class_="form-control") }} </div>
+<form class="form-inline" method="GET" action="/">
+  <div class="form-group"> {{ form.user_input.label }} {{ form.user_input(size=70, class_="form-control") }} </div>
+  <div class="form-group">
+    {{ form.input_type.label}}
+    <select class="form-control">
+      {% for value, text in form.input_type.choices %}
+        <option value="value">{{text}}</option>
+      {% endfor %}
+    </select>
+  </div>
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
 {% endblock %}
